modules/infra/k8s-manifests/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      # 테라폼 OIDC 조건에 묶인 ServiceAccount를 연결
      serviceAccountName: booking-sa 
      containers:
      - name: booking-app
        image: <본인의_booking_컨테이너_이미지_주소>
        ports:
        - containerPort: 8080
