modules/infra/k8s-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
  labels:
    app: backend-app
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 80       
      targetPort: 8080 
      protocol: TCP
  selector:
    app: backend-app
