modules/infra/k8s-manifests/frontend-deployment.yaml
# 프론트엔드 배포 및 서비스
apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-frontend
  namespace: default
  labels:
    app: train-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: train-frontend
  template:
    metadata:
      labels:
        app: train-frontend
    spec:
      containers:
      - name: frontend-container
        image: $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/train-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: train-frontend-service
  namespace: default
spec:
  type: ClusterIP # 외부 노출은 Ingress(ALB)가 하므로 내부 통신용으로 설정
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: train-frontend
