modules/infra/k8s-manifests/ingress.yaml
# ALB 경로 분기
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: train-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # 네트워크 계층에서 만들어둔 ALB 전용 Security Group
    # alb.ingress.kubernetes.io/security-groups: sg-xxxxxxxxxxxx
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix 
        backend:
          service:
            name: train-backend-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: train-frontend-service
            port:
              number: 80
