modules/infra/k8s-manifests/test_ingress.yaml
# 테스트용 임시 ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: train-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' # 80포트만 임시 활성화
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-web     # 시나리오에서 생성할 임시 Nginx 서비스 이름 매핑
            port:
              number: 80
